:art: fix footer spacing

--- a/src/components/layouts/marketing/marketing.module.css
+++ b/src/components/layouts/marketing/marketing.module.css
@@ -34,4 +34,5 @@
 .meta {
   display: flex;
   justify-content: space-between;
+  padding-bottom: 32px;
 }
